--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "type": "library",
     "require": {
         "monolog/monolog": "1.*",
-        "mashape/unirest-php": "^3.0"
+        "mashape/unirest-php": "^3.0",
+        "vlucas/phpdotenv": "^2.5"
     },
     "require-dev": {
-
+        "phpunit/phpunit": "~5.3"
     },
     "license": "MIT",
     "authors": [
