--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "vlucas/phpdotenv": "^2.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "^6.0",
+        "mockery/mockery": "^1.2"
     },
     "license": "MIT",
     "authors": [
