--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,14 @@
     "license": "MIT",
     "authors": [
         {
+            "name": "Olanipekun Femi",
+            "email": "iolufemi@ymail.com"
+        },
+        {
+            "name": "Emereuwaonu Eze",
+            "email": "emereuwaonueze@gmail.com"
+        },
+        {
             "name": "Olaobaju Abraham",
             "email": "olaobajua@gmail.com"
         }
