--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "php": ">=7.0.0",
-        "monolog/monolog": "^2.*",
+        "monolog/monolog": "^2.0",
         "mashape/unirest-php": "^3.0",
         "vlucas/phpdotenv": "^2.5"
     },
