--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,10 @@
     "require": {
         "php": ">=7.0.0",
         "monolog/monolog": "^2.0",
-        "mashape/unirest-php": "^3.0",
-        "vlucas/phpdotenv": "^2.5"
+        "mashape/unirest-php": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
-        "mockery/mockery": "^1.2"
+        "phpunit/phpunit": "^7"
     },
     "license": "MIT",
     "authors": [
